--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.2.5",
+    "@astrojs/mdx": "^4.2.6",
     "@astrojs/sitemap": "^3.3.1",
-    "@astrojs/starlight": "^0.34.1",
+    "@astrojs/starlight": "^0.34.2",
     "@tailwindcss/vite": "^4.1.4",
-    "astro": "^5.7.7",
+    "astro": "^5.7.10",
     "astro-compressor": "^1.0.0",
+    "astro-icon": "^1.1.5",
     "clipboard": "^2.0.11",
     "globby": "^14.1.0",
     "gsap": "^3.12.7",
@@ -29,6 +30,8 @@
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
+    "@iconify-json/line-md": "^1.2.7",
+    "@iconify-json/mdi": "^1.2.3",
     "@tailwindcss/forms": "^0.5.10",
     "astro-vtbot": "^2.1.2",
     "prettier": "^3.5.3",
